--- a/meinberlin/assets/scss/components/_typeahead.scss
+++ b/meinberlin/assets/scss/components/_typeahead.scss
@@ -26,7 +26,7 @@
 .typeahead__input-group-text {
     display: flex;
     align-items: center;
-    padding: $input-padding-y $input-padding-x;
+    padding: $input-padding-y $spacer;
     margin-bottom: 0;
     text-align: center;
     white-space: nowrap;
