--- a/meinberlin/assets/scss/utility.scss
+++ b/meinberlin/assets/scss/utility.scss
@@ -77,6 +77,10 @@
     display: inline-flex;
 }
 
+.u-flex {
+    display: flex;
+}
+
 .u-align-right {
     text-align: right;
 }
